...
            noFavouritesImageView.leadingAnchor.constraint(equalTo: view.leadingAnchor, constant: 130),
            noFavouritesImageView.trailingAnchor.constraint(equalTo: view.trailingAnchor, constant: -130)
        ])
    }

    @objc private func showLogoutAlert() {
        let alertController = UIAlertController(title: "Пока, пока!", message: "Уверены, что хотите выйти?", preferredStyle: .alert)
        let alertYes = UIAlertAction(title: "Да", style: .default) { [weak self] _ in
            self?.presenter.logout()
        }
        let alertNo = UIAlertAction(title: "Нет", style: .default)
        alertController.addAction(alertYes)
        alertController.addAction(alertNo)
        present(alertController, animated: true)
...
