...
    // MARK: - Public Properties
    weak var delegate: AuthViewControllerDelegate?

    // MARK: - Private Properties
    private let enterButton: UIButton = {
        let enterButton = UIButton()
        enterButton.setTitle("Войти", for: .normal)
        enterButton.titleLabel?.font = .systemFont(ofSize: 17, weight: .bold)
        enterButton.setTitleColor(.YPBlack, for: .normal)
        enterButton.backgroundColor = .white
        enterButton.addTarget(nil, action: #selector(enterButtonTapped), for: .touchUpInside)
        enterButton.layer.cornerRadius = 16
        enterButton.layer.masksToBounds = true
...
